--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <div class="header-wrapper">
                 <div class="image-gibrids">
                 <img class="image-gibrid" src="/img/gibrid-1.jpg" alt="гибрид Porsche">
-                    <img class="image-gibrid" image-gibrid src="/img/gibrid-2.png" alt="E-CARSИсточник ">
+                    <img class="image-gibrid"  src="/img/gibrid-2.png" alt="E-CARS ">
             </div>
                 <div class="header-about">
                     <h1 class="h1-main">Прорывные технологии<br> ХХI века</h1>
