--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
                   <li class="menu-nav-li"><a href="#about"> О проекте</a></li>
                   <li class="menu-nav-li"><a href="#main">Как начиналось</a></li>
                   <li class="menu-nav-li"><a href="#plus">Плюсы и минусы гибридов</a></li>
-                  <li class="menu-nav-li"><a href="/contacts.html">Контакты </a></li>
-                <li class="menu-nav-li"><a href="/literature.html" target="_blank">Источники </a></li>
+                  <li class="menu-nav-li"><a href=". /contacts.html">Контакты </a></li>
+                <li class="menu-nav-li"><a href=". /literature.html" target="_blank">Источники </a></li>
               </ul>
               
             </nav>
@@ -26,8 +26,8 @@
                 
                 <div class="header-wrapper">
                 <div class="image-gibrids">
-                <img class="image-gibrid" src="/img/gibrid-1.jpg" alt="гибрид Porsche">
-                    <img class="image-gibrid"  src="/img/gibrid-2.png" alt="E-CARS ">
+                <img class="image-gibrid" src="./img/gibrid-1.jpg" alt="гибрид Porsche">
+                    <img class="image-gibrid"  src=". /img/gibrid-2.png" alt="E-CARS ">
             </div>
                 <div class="header-about">
                     <h1 class="h1-main">Прорывные технологии<br> ХХI века</h1>
