--- a/literature.html
+++ b/literature.html
@@ -17,6 +17,14 @@
     <li><a href=""> https://www.interfax.ru/</a></li>
   </ol>
     </p>
+    <h1 class="h1-main">Инструменты</h1>
+    <p>
+    <ol>
+      <li value="1">VS Code</li>
+      <li>GitHub</li>
+      <li>Браузеры</li>
+    </ol>
+    </p>
     <form action="index.html" >
       <button>На главную</button>
     </form>
