--- a/contacts.html
+++ b/contacts.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
 
-  <link rel="shortcut icon" href="/img/favicon.ico" type="image/x-icon">
+  <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
   <link rel="stylesheet" href="css/style.css">
   <title>Контакты</title>
 </head>
@@ -31,9 +31,9 @@
     <div class="container">
 
       <div class="footer-wrapper-img">
-        <img class="image-gibrid-four" src="/img/gibrid-4.png" alt="Фото гибридного автомобиля"></p>
-        <img class="image-gibrid-four" src="/img/gibrid-5.png" alt="Фото гибридного автомобиля"></p>
-        <img class="image-gibrid-four" src="/img/gibrid-6.png " alt="Фото гибридного автомобиля"></p>
+        <img class="image-gibrid-four" src="img/gibrid-4.png" alt="Фото гибридного автомобиля"></p>
+        <img class="image-gibrid-four" src="img/gibrid-5.png" alt="Фото гибридного автомобиля"></p>
+        <img class="image-gibrid-four" src="img/gibrid-6.png " alt="Фото гибридного автомобиля"></p>
          
 
       </div>
