--- a/literature.html
+++ b/literature.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
 
-<link rel="shortcut icon" href="/img/favicon.ico" type="image/x-icon">
+<link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
 <link rel="stylesheet" href="css/style.css">
   <title>Источники</title>
 </head>
@@ -34,7 +34,7 @@
     <div class="container">
   
       <div class="footer-wrapper">
-        <img class="image-gibrid-four" src="/img/gibrid-4.png" alt="Первый гибрид в России"></p>
+        <img class="image-gibrid-four" src="img/gibrid-4.png" alt="Первый гибрид в России"></p>
         <p class="copyrights" id="contact">
           Работу выполнил: <br>Утюшев Илья, 12 лет.<br>
           МБОУ "Уемская СШ".
